# Li2Former-v1

./: .gitignore  README.md
src/pedestrian_real/: CMakeLists.txt  package.xml
src/pedestrian_real/launch/: main.launch
src/pedestrian_real/maps/: 417_passage.pbstream  417_passage.pgm  417_passage.yaml
src/pedestrian_real/rviz/: real_world.rviz
src/pedestrian_real/scripts/: main.sh  video.py
src/pedestrian_simulation/launch/: config.launch  main.launch
src/pedestrian_simulation/maps/: passage.yaml
src/pedestrian_simulation/rviz/: sim_env.rviz
src/pedestrian_simulation/scripts/dynamic_config/: pedestrians_generate.py
src/pedestrian_simulation/urdf/: turtlebot3_waffle.gazebo.xacro
src/pedestrian_simulation/worlds/: empty_with_pedestrians.world  passage.world  passage_with_pedestrians.world
src/pedestrian_tracker/scripts/: li2former_ros.py
src/pedestrian_tracker/scripts/cfgs/: ros_drownet.yaml  ros_li2former.yaml
src/pedestrian_tracker/scripts/li2former/: detector.py
src/pedestrian_tracker/scripts/li2former/config/: __init__.py  config.py
src/pedestrian_tracker/scripts/li2former/models/: __init__.py
src/pedestrian_tracker/scripts/li2former/models/dr_spaam/: __init__.py  dr_spaam.py  losses.py
src/pedestrian_tracker/scripts/li2former/models/drow_net/: drow_net.py  losses.py
src/pedestrian_tracker/scripts/li2former/tools/: __init__.py  detector.py
src/pedestrian_tracker/scripts/li2former/utils/: eval_utils.py  scan_utils.py
src/user_config/: ped_circle_config.yaml  ped_sider_config.yaml  user_config.yaml
(+15 files in other folders)
